# PMCSN

./: .gitignore  CMakeLists.txt  Input e Formule.xlsx  README.md
Code/: Makefile  config.c  config.h  main.c  simulate
Code/Logic/: logic.c  logic.h  structure.h  var.h
Code/Logic/FiniteHorizon/: finite_horizon.c  finite_horizon.h
Code/Logic/InfiniteHorizon/: infinite_horizon.c  infinite_horizon.h
Code/Utils/: utils.c  utils.h
Estimator/: acs  estimate  uvs
